tests/testFiles/semanticErrors/initializevarasobject.meme
ermahgerd b = 10;
ermahgerd a = very b();
